--- a/results/index.html
+++ b/results/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <canvas id="myChart"></canvas>
     <header>
         <div>
             <h1>Results Page</h1>
@@ -28,9 +29,10 @@
         </section>
     </main>
     <footer>
-        <canvas id="myChart"></canvas>
     </footer>
     <script type="module" src="results.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+
 </body>
 
 </html>
