chart rendered on results page

--- a/results/index.html
+++ b/results/index.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
+    <h1>Your results chart</h1>
     <canvas id="myChart"></canvas>
     <header>
         <div>
-            <h1>Results Page</h1>
+            <h1>Results Table</h1>
         </div>
     </header>
     <main>
